[project]
name = "PyScripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.7.2",
    "drissionpage>=4.1.1.2",
    "poimage>=0.0.22",
    "python-docx>=1.2.0",
    "requests>=2.32.4",
    "tabulate>=0.9.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
